shrunk headshot for loading and fixed header alignment

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -55,7 +55,7 @@
 
   .page-link {
     color: #c7cd67;
-    line-height: $base-line-height * 4.8;
+    line-height: $base-line-height * 4.29;
 
     // Gaps between nav items, but not on the last one
     &:not(:last-child) {
